cluster/talos/apps/privatebin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: privatebin
  labels:
    goldilocks.fairwinds.com/enabled: "true"
