cluster/talos/apps/privatebin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: privatebin-ingress
  namespace: privatebin
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: privatebin
      port:
        number: 80
  tls:
  - hosts:
    - privatebin
